@@ -384,9 +384,6 @@ t/300.Builder.t
 t/410.Translate.t
 t/900.publican.t
 t/910.publican.Users_Guide.t
-t/perlcritic.t
-t/pod-coverage.t
-t/pod.t
 templates/index.tmpl
 templates/opds-langs.tmpl
 templates/opds-prods.tmpl
@@ -394,6 +391,7 @@ templates/opds.tmpl
 templates/Sitemap.tmpl
 templates/static_toc.tmpl
 templates/stats.tmpl
+templates/toc-jstree.tmpl
 templates/toc-oneline.tmpl
 templates/toc.tmpl
 Users_Guide/en-US/Adding_Code_Samples.xml
@@ -486,3 +484,6 @@ windows/publican.bmp
 windows/publican.ico
 windows/publican.nsi
 windows/publican2.ico
+xt/author/perlcritic.t
+xt/author/pod-coverage.t
+xt/author/pod.t
