@@ -26,6 +26,7 @@
   - Fix startinglinenumber ignored & XML entites not being escaped. BZ #653432
   - Added site config toc_type to allow selecting TOC styles.
   - Fix perl critic encoding cheack failing. BZ #684509
+  - Added authortest target for author tests.
 
 2.5  Fri Dec 02 2010 
   - Use SPEC_VERSION for splash page spec files
